--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,6 +22,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"],
+  "include": ["src", "testSetup/apiMock.ts"],
   "exclude": ["src/**/*.test.tsx"]
 }
