--- a/.github/workflows/publish-plain.yml
+++ b/.github/workflows/publish-plain.yml
@@ -22,5 +22,6 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: dist
-          server-dir: public_html
+          local-dir: dist/
+          server-dir: public_html/
+          protocol: ftp 
